<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="decimal">.</string>
    <string name="_addition">+</string>
    <string name="_division">/</string>
    <string name="_subtraction">-</string>
    <string name="_equals">=</string>
    <string name="_multiplication">*</string>
    <string name="clear">Clr</string>
    <string name="neg">Neg</string>
    <string name="tan">Tan</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="c_op">C/Op</string>
    <string name="lt">LT</string>
    <string name="rt">RT</string>
</resources>
